SVN: merge branch 3.1->3.2(trunk) (rev. 10624-10819)
git-svn-id: https://svn.javlin.eu/svn/cloveretl.opensource/trunk@10820 a09ad3ba-1a0f-0410-b1b9-c67202f10d70